# aoc2020

./: .gitignore
01/: part1.rs  part2.rs
02/: part1.rs  part2.rs
03/: part1.rs  part2.rs
04/: Cargo.toml  part1.rs  part2.rs
05/: Cargo.toml  part1.rs  part2.rs
06/: Cargo.toml  part1.rs  part2.rs
07/: Cargo.toml  part1.rs  part2.rs
08/: Cargo.toml  part1.rs  part2.rs
09/: Cargo.toml  part1.rs  part2.rs
10/: Cargo.toml  part1.rs  part2.rs
11/: Cargo.toml  part1.rs  part2.rs
13/: Cargo.toml  part1.rs  part2.rs
14/: Cargo.toml  part1.rs  part2.rs
15/: Cargo.toml  part1.rs  part2.rs
16/: Cargo.toml  part1.rs  part2.rs
17/: Cargo.toml  part1.rs  part2.rs
18/: Cargo.toml  input-test.txt  part1.rs  part2.rs
19/: Cargo.toml  part1.rs
20/: Cargo.toml  part1.rs  part2.rs
21/: Cargo.toml  part1.rs  part2.rs
22/: part1.rs  part2.rs
23/: Cargo.toml
