[package]
name = "day21"
version = "0.1.0"
authors = ["Darcy Ryan <dryan@dgitsystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
itertools = "0.9.0"

[[bin]]
name = "part1"
path = "part1.rs"

[[bin]]
name = "part2"
path = "part2.rs"
